--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany.app</groupId>
-	<artifactId>my-app</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<artifactId>codeScanner</artifactId>
+	<version>1.1</version>
 
 	<name>SymbolScanner</name>
 
